# holmes

./: .dockerignore  .env.example  .gitignore  GUIDE.md  Makefile  README.md  SUBMISSION_WRITEUP.md  docker-compose.yml  lefthook.yml  package.json
.planning/: LESSONS-LEARNED.md  MINOR_ISSUES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SHERLOCKS_DIARY_SPEC.md  (+2 more)
backend/: Dockerfile  create_sample_pdf.py  pyproject.toml  redact_pdf.py  test_image_redaction.py  test_redaction.py  test_video_redaction.py
backend/alembic/: env.py
backend/alembic/versions/: 0562cc9e65bd_add_agent_executions_table.py  461979103c5a_add_case_files_table.py  475d688d81ea_merge_case_notes_and_verdict_branches.py  a7c2f9e83d12_add_duplicate_of_column.py  add_case_notes_table.py  b3a1f7c42e90_add_latest_workflow_id_to_cases.py  c7a1f8d23e51_add_knowledge_tables.py  d8ed3accb0f4_add_cases_table.py  daad8c23f758_add_citations_to_locations.py  e4b2c1a37f90_evolve_kg_schema_for_llm_builder.py  f8a3b2c91d40_add_investigation_tasks_and_verdict_cols.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  storage.py
backend/app/agents/: __init__.py  audio_redaction.py  base.py  chat_tools.py  domain_agent_runner.py  domain_runner.py  evidence.py  factory.py  financial.py  geospatial.py  image_redaction.py  kg_builder.py  legal.py  orchestrator.py  parsing.py  redaction.py  redaction_integration_example.py  strategy.py  synthesis.py  triage.py  video_redaction.py
backend/app/agents/prompts/: __init__.py  _citation_rules.py  chat.py  evidence.py  financial.py  geospatial.py  kg_builder.py  legal.py  orchestrator.py  strategy.py  synthesis.py  triage.py
backend/app/api/: __init__.py  agents.py  auth.py  cases.py  chat.py  confirmations.py  files.py  findings.py  health.py  knowledge_graph.py  locations.py  notes.py  redaction.py  sse.py  synthesis.py  timeline.py
backend/app/models/: __init__.py  agent_execution.py  auth.py  base.py  case.py  file.py  findings.py  investigation_task.py  knowledge_graph.py  note.py  synthesis.py
backend/app/schemas/: __init__.py  agent.py  case.py  common.py  file.py  findings.py  geospatial.py  health.py  kg_builder.py  knowledge_graph.py  notes.py  redaction.py  synthesis.py
backend/app/services/: __init__.py  adk_service.py  agent_events.py  chat_service.py  confirmation.py  file_service.py  findings_service.py  geocoding_service.py  kg_builder.py  pipeline.py
(+425 files in other folders)
